istio/eclwatch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eclwatch-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8010
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eclwatch
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - eclwatch-gateway
  http:
  - match:
    - port: 8010
      uri:
        prefix: /
    route:
    - destination:
        host: eclwatch.hpcc-system.svc.cluster.local
